Mask modifier doesn't copy settings on object copy #37252

Closed
opened 2013-10-29 19:39:44 +01:00 by Jefferson Rausseo · 3 comments

%%%--- Operating System, Graphics card ---
Ubuntu 12.04 - Nvidia 8600

- Blender version with error, and version that worked ---

r60988

- Short description of error ---

If I duplicate an object with a modifier "Mask" in Armature mode, the new object modifier "Mask" appears in Vertex mode

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Add a Cube.
  2. Select the Cube and add a Mask modifier.
  3. Change the Vertex Mode to Armature Mode.
  4. Duplicate the Cube.
  5. Review the new cube modifier, not same.
    %%%
%%%--- Operating System, Graphics card --- Ubuntu 12.04 - Nvidia 8600 - Blender version with error, and version that worked --- r60988 - Short description of error --- If I duplicate an object with a modifier "Mask" in Armature mode, the new object modifier "Mask" appears in Vertex mode - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Add a Cube. 2. Select the Cube and add a Mask modifier. 3. Change the Vertex Mode to Armature Mode. 4. Duplicate the Cube. 5. Review the new cube modifier, not same. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev61007. Thanks for the report, closing.%%%

%%%Fixed in svn rev61007. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37252
No description provided.