Fix #37252: Mask modifier doesn't copy settings on object copy